fix: parts: icon: Ensure icon is vertically aligned

--- a/src/app/parts/icon/icon.component.sass
+++ b/src/app/parts/icon/icon.component.sass
@@ -1,5 +1,14 @@
 \:host
+  padding: 0
+  margin: 0
+  display: inline-flex
+  align-items: center
+  justify-content: center
+
   a
+    display: inline-flex
+    margin: 0
+    padding: 0
     fill: inherit
     color: inherit
     opacity: 0.6
